# LVBK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  env.example  nginx.conf  podman-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  release.yml  test.yml
configs/api/: inference.yaml  training.yaml
configs/mmdetection/: person_detection.py
configs/mmpose/: silat_lincah.py
configs/watson/: prompts.yaml
docs/setup/: README.md  codecov_setup.md
docs/user_guides/: getting_started.md
src/lvbk/: __init__.py
src/lvbk/api/: __init__.py  endpoints.py  main.py
src/lvbk/data/: __init__.py  video_processor.py
src/lvbk/models/: __init__.py  pose_detector.py  technique_analyzer.py  watson_client.py
src/lvbk/utils/: __init__.py  config_utils.py  logging_utils.py  validation_utils.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_technique_analyzer.py  test_video_processor.py
